--- a/content/post/2018-02-17-in-the-beginning.rmd
+++ b/content/post/2018-02-17-in-the-beginning.rmd
@@ -23,7 +23,7 @@ I work in a small team of 9 performance, costing and electronic medical record (
 
 journey with R (and data science) since discovering Rs existence while googling for a way to make boxplots in Excel back in 2014.
 
-There are five women and four men in out team and we have immigrants from  countries such as Singapore, Sri Lanka, South Africa and Moldova. Every member of my team, including myself, have no formal computer science or statistical education.  Like most people who do this work in Melbourne our career backgrounds are varied - nursing, clincal coding, physiotherapy, lab science and accounting to name a few.
+There are five women and four men in our team and we have immigrants from  countries such as Singapore, Sri Lanka, South Africa and Moldova. Every member of my team, including myself, have no formal computer science or statistical education.  Like most people who do this work in Melbourne our career backgrounds are varied - nursing, clincal coding, physiotherapy, lab science and accounting to name a few.
 
 We all do our work mostly by querying our data warehouse and electronic medical record (Epic) using SQL queries and/or Microsft Analysis Services MDX queries and presenting results using a mixture of Excel, PDF, Word and SQL Server Reporting Services depending on the business requests. Many of our reports are automated to various degrees and delivered via various methods including a custom reporting portal and scheduled emails.
 
