--- a/content/post/2018-06-28-linking-to-other-post-in-a-blogdown-app.Rmd
+++ b/content/post/2018-06-28-linking-to-other-post-in-a-blogdown-app.Rmd
@@ -80,10 +80,8 @@ In oyur blog project on your computer, you treat the content folder as the root
 of your blog when it is published so all folder/slug paths should be relative
 to that.  Guaranteed, works on my computer.
 
-IN a code chunk I think you can use
-```{r}
-blogdown::shortcode_html("relref", "post/guards-guards-purrr-map-if")
-
-```
-
-
+I am not sure how to create links from R chunks my attempts to use <code>
+blogdown::shortcode("relref", "post/guards-guards-purrr-map-if")</code> or 
+<code>
+blogdown::shortcode_html("relref", "post/guards-guards-purrr-map-if")</code> 
+caused my netlify build to fail. 
