changes to YAML

--- a/content/post/2018-06-28-linking-to-other-post-in-a-blogdown-app.Rmd
+++ b/content/post/2018-06-28-linking-to-other-post-in-a-blogdown-app.Rmd
@@ -2,14 +2,14 @@
 title: "Links - linking to other posts in your blogdown app"
 author: "Adam Gruer"
 date: '2018-06-28'
-draft: no
+draft: false
 header:
   caption: ''
   image: links.jpg
 slug: linking-to-other-post-in-a-blogdown-app
 tags:
-- hugo
-- blogdown
+  - hugo
+  - blogdown
 categories: Tips
 ---
 
@@ -61,8 +61,8 @@ header:
   image: ''
 slug: linking-to-other-post-in-a-blogdown-app
 tags:
-- hugo
-- blogdown
+  - hugo
+  - blogdown
 categories: Tips
 ---
 </code>
