--- a/content/post/2018-06-28-linking-to-other-post.Rmd
+++ b/content/post/2018-06-28-linking-to-other-post.Rmd
@@ -1,6 +1,6 @@
 ---
 title: 'Links - linking to other posts in your blogdown app'
-author: 'Adam Gruer'
+author: Adam Gruer
 date: '2018-06-28'
 header:
   image: 'links.jpg'
