delete problem causing post, try to build up new one incrementally

--- a/content/post/2018-06-29-test.Rmd
+++ b/content/post/2018-06-29-test.Rmd
@@ -12,3 +12,6 @@ header:
   image: ''
 ---
 
+This a short post demonstrating how to link to another post from the .Rmd source
+of a separate post.
+
