--- a/content/post/2018-06-29-links-to-other-posts.Rmd
+++ b/content/post/2018-06-29-links-to-other-posts.Rmd
@@ -3,8 +3,10 @@ title: 'Linking to other posts'
 author: Adam Gruer
 date: '2018-06-29'
 slug: links-to-other-posts
-categories: []
-tags: []
+categories:
+  - Tips
+tags:
+  - beginners
 header:
   caption: links
   image: link.jpg
