hopefully will build note single category in tags in yaml needs to be indented and on separate line

--- a/content/post/2017-11-12-github-issues-data-ozunconf-17.Rmd
+++ b/content/post/2017-11-12-github-issues-data-ozunconf-17.Rmd
@@ -45,7 +45,7 @@ library(dplyr)  # data wrangling and pipes %>%
 library(purrr) # there will be a lot of map / reducing with the returned data
 # devtools::install_github("ropenscilabs/icon")
 library(icon) # for some cool icons!
-# devtools::install_github("ropenscilabs/ochRe"
+# devtools::install_github("ropenscilabs/ochRe")
 library(ochRe) # for some Oz color palettes
 ```
 
