Remove slug from post

--- a/content/post/2019-02-22-goodshirt/index.Rmd
+++ b/content/post/2019-02-22-goodshirt/index.Rmd
@@ -2,7 +2,6 @@
 title: Goodshirt
 author: Adam Gruer
 date: '2019-02-22'
-slug: goodshirt
 categories: []
 tags:
   - packages
@@ -11,7 +10,7 @@ header:
   image: ''
 ---
 
-The Good Place is such a great show.  I recntly created an API client package called goodshirt to bring a tast of The Good Place to our Good place, the R console.
+The Good Place is such a great show.  I recently created an API client package called goodshirt to bring a tast of The Good Place to our Good place, the R console.
 
 ![ascii image of a cat](goodshirt_cat.png)
 
